Improve parallax layers and responsiveness

--- a/index.html
+++ b/index.html
@@ -1,35 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Parallax Effect</title>
-		<link rel="stylesheet" href="ParallaxEffect.css">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-	</head>
-	<body>
-		<div id="wrapper">
-			<header id="container">
-				<img src="background.png" alt="Image not found" id="background">
-				<img src="foreground.png" alt="Image not found" id="foreground">
-				<h1 id="heading">ADVENTURE</h1>
-			</header>
-			<section>
-				<h2 class="secHeading">Adventure Time!</h2>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.<br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.</p>
-				<div class="bg bg1">
-					<h2 class="desc">BIKING</h2>
-				</div>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.<br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.</p>
-				<div class="bg bg2">
-					<h2 class="desc">PARA GLIDING</h2>
-				</div>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.<br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.</p>
-				<div class="bg bg3">
-					<h2 class="desc">SURFING</h2>
-				</div>
-				<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.<br/><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed facilisis lorem. Nulla erat tortor, hendrerit sed auctor dignissim, rutrum ut lacus. Donec justo magna, convallis a porttitor sit amet, euismod vel nisi. Donec ultrices volutpat dictum. Nunc nisi ante, fringilla vel nulla eu, pulvinar sodales dui. Proin mollis eget elit at scelerisque. Praesent vel molestie nibh. Nunc ultrices tellus at risus congue condimentum. Integer id turpis interdum, mollis urna vel, ornare velit. Aliquam tempor turpis at sapien accumsan, vitae ornare orci rhoncus. Donec a ultrices lorem, sed scelerisque dui. Donec et massa nisi. Aliquam fringilla convallis placerat. Nunc augue.</p>
-			</section>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Parallax Effect</title>
+    <link rel="stylesheet" href="ParallaxEffect.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div id="wrapper">
+      <header id="container">
+        <img src="background.png" alt="Image not found" id="background" />
+        <img src="foreground.png" alt="Image not found" id="foreground" />
+        <h1 id="heading">ADVENTURE</h1>
+      </header>
+      <section>
+        <h2 class="secHeading">Adventure Time!</h2>
+        <p class="text">
+          Adventure isn’t just about thrill — it’s about truly feeling alive.
+          Activities like biking, paragliding, and surfing push you beyond your
+          comfort zone, teaching you courage, focus, and resilience. The rush of
+          wind on your face, the roar of waves beneath your board, or the view
+          from a thousand feet up remind you how vast and beautiful life is.
+          Every adventure challenges your limits and builds confidence that
+          spills into every part of your life. It disconnects you from routine,
+          reconnects you with nature, and sharpens your mind to live in the
+          moment. Adventure sports don’t just test your body — they free your
+          spirit, awaken curiosity, and remind you that fear and excitement
+          often come from the same spark.
+        </p>
+        <div class="bg bg1">
+          <h2 class="desc">BIKING</h2>
+        </div>
+        <p class="text">
+          Biking is more than a sport — it’s a journey of freedom, endurance,
+          and self-discovery. With every turn of the pedal, you feel the world
+          unfold around you — the changing landscapes, the rhythm of your
+          breath, and the sense of motion that clears your mind. Whether it’s
+          cruising through city streets or tackling rugged mountain trails,
+          biking builds strength, focus, and patience. It teaches balance — not
+          just on two wheels, but in life. The hum of the tires, the wind
+          rushing past, and the quiet satisfaction after a long ride remind you
+          that progress comes one push at a time. Biking isn’t just travel —
+          it’s therapy on wheels.<br /><br />It challenges your endurance,
+          strengthens your body, and calms your mind. Whether you’re racing down
+          a mountain trail, exploring unknown paths, or riding through the early
+          morning quiet, biking teaches discipline, balance, and presence. It’s
+          where exhaustion meets satisfaction, and effort turns into
+          exhilaration — a perfect blend of adventure, freedom, and self-growth.
+        </p>
+        <div class="bg bg2">
+          <h2 class="desc">PARA GLIDING</h2>
+        </div>
+        <p class="text">
+          Paragliding is the purest form of flight — a breathtaking blend of
+          freedom, courage, and serenity. As you run toward the edge and lift
+          off, the world below transforms into a vast canvas of colors and
+          patterns. The wind becomes your companion, the sky your playground.
+          Suspended between earth and clouds, every heartbeat syncs with the
+          rhythm of the air. .<br /><br />It’s not just an extreme sport — it’s
+          a moment of surrender and control coexisting perfectly. Paragliding
+          teaches trust: in your skill, your gear, and the forces of nature. The
+          silence up there isn’t empty — it’s filled with awe, clarity, and
+          perspective. Every flight is a reminder that sometimes, you have to
+          let go of the ground to truly feel alive
+        </p>
+        <div class="bg bg3">
+          <h2 class="desc">SURFING</h2>
+        </div>
+        <p class="text">
+          ChatGPT said: Surfing is a dance between you and the ocean — a
+          powerful mix of balance, patience, and pure exhilaration. As you
+          paddle out and catch your first wave, time seems to slow down; every
+          sense sharpens, and you feel completely alive. The ocean tests your
+          strength and calm, teaching you to flow with its rhythm rather than
+          fight against it. Each wave is different, unpredictable, and that’s
+          what makes it magical — no two rides are ever the same. Surfing
+          connects you deeply with nature, grounding you in its vastness and
+          power. It builds resilience through every wipeout and joy through
+          every perfect glide. Beyond sport, surfing becomes meditation in
+          motion — a reminder that freedom comes when you learn to move with
+          life’s waves, not against them..<br /><br />Every paddle out
+          challenges your endurance; every wave you catch rewards your patience.
+          The rush of dropping into a wave, the spray on your face, and the pull
+          of the current awaken something primal — a connection to the earth’s
+          raw energy. Surfing teaches humility, because the ocean always has the
+          final say, yet it also gives a sense of liberation no land can offer.
+          It’s not about mastering the waves, but about becoming one with them —
+          finding peace, balance, and freedom in every ride.
+        </p>
+      </section>
+    </div>
+  </body>
 </html>
