Improve parallax layers and responsiveness

--- a/index.html
+++ b/index.html
@@ -69,25 +69,25 @@
           <h2 class="desc">SURFING</h2>
         </div>
         <p class="text">
-          ChatGPT said: Surfing is a dance between you and the ocean — a
-          powerful mix of balance, patience, and pure exhilaration. As you
-          paddle out and catch your first wave, time seems to slow down; every
-          sense sharpens, and you feel completely alive. The ocean tests your
-          strength and calm, teaching you to flow with its rhythm rather than
-          fight against it. Each wave is different, unpredictable, and that’s
-          what makes it magical — no two rides are ever the same. Surfing
-          connects you deeply with nature, grounding you in its vastness and
-          power. It builds resilience through every wipeout and joy through
-          every perfect glide. Beyond sport, surfing becomes meditation in
-          motion — a reminder that freedom comes when you learn to move with
-          life’s waves, not against them..<br /><br />Every paddle out
-          challenges your endurance; every wave you catch rewards your patience.
-          The rush of dropping into a wave, the spray on your face, and the pull
-          of the current awaken something primal — a connection to the earth’s
-          raw energy. Surfing teaches humility, because the ocean always has the
-          final say, yet it also gives a sense of liberation no land can offer.
-          It’s not about mastering the waves, but about becoming one with them —
-          finding peace, balance, and freedom in every ride.
+          Surfing is a dance between you and the ocean — a powerful mix of
+          balance, patience, and pure exhilaration. As you paddle out and catch
+          your first wave, time seems to slow down; every sense sharpens, and
+          you feel completely alive. The ocean tests your strength and calm,
+          teaching you to flow with its rhythm rather than fight against it.
+          Each wave is different, unpredictable, and that’s what makes it
+          magical — no two rides are ever the same. Surfing connects you deeply
+          with nature, grounding you in its vastness and power. It builds
+          resilience through every wipeout and joy through every perfect glide.
+          Beyond sport, surfing becomes meditation in motion — a reminder that
+          freedom comes when you learn to move with life’s waves, not against
+          them..<br /><br />Every paddle out challenges your endurance; every
+          wave you catch rewards your patience. The rush of dropping into a
+          wave, the spray on your face, and the pull of the current awaken
+          something primal — a connection to the earth’s raw energy. Surfing
+          teaches humility, because the ocean always has the final say, yet it
+          also gives a sense of liberation no land can offer. It’s not about
+          mastering the waves, but about becoming one with them — finding peace,
+          balance, and freedom in every ride.
         </p>
       </section>
     </div>
